--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ dill==0.3.9
 dlib==19.24.6
 face-recognition==1.3.0
 face_recognition_models==0.3.0
+fastapi==0.110.0
+python-multipart==0.0.9
+uvicorn==0.29.0
+pydantic==2.7.1
 filelock==3.16.1
 fonttools==4.55.0
 fsspec==2024.10.0
