--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.8.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
@@ -7,13 +9,11 @@ dill==0.3.9
 dlib==19.24.6
 face-recognition==1.3.0
 face_recognition_models==0.3.0
-fastapi==0.110.0
-python-multipart==0.0.9
-uvicorn==0.29.0
-pydantic==2.7.1
+fastapi==0.115.11
 filelock==3.16.1
 fonttools==4.55.0
 fsspec==2024.10.0
+h11==0.14.0
 idna==3.10
 Jinja2==3.1.4
 kiwisolver==1.4.7
@@ -28,8 +28,11 @@ pandas==2.2.3
 pillow==11.0.0
 psutil==6.1.0
 py-cpuinfo==9.0.0
+pydantic==2.10.6
+pydantic_core==2.27.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
@@ -37,6 +40,8 @@ scipy==1.14.1
 seaborn==0.13.2
 setuptools==75.6.0
 six==1.16.0
+sniffio==1.3.1
+starlette==0.46.1
 sympy==1.13.1
 torch==2.5.1
 torchvision==0.20.1
@@ -46,3 +51,4 @@ tzdata==2024.2
 ultralytics==8.3.37
 ultralytics-thop==2.0.12
 urllib3==2.2.3
+uvicorn==0.34.0
